--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,14 +20,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_app_name"
-            android:text="@string/app_name"
-            android:textSize="24dp"
+            android:text="향수 추천 서비스"
+            android:textSize="28dp"
+            android:textStyle="bold"
             android:textColor="@color/black"
             app:layout_constraintVertical_bias="0.4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="원하는 향수를 추천해 드립니다."
+            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textSize="16dp"
+            android:textColor="@color/black"/>
 
 
         <ImageView
@@ -49,6 +61,7 @@
             android:id="@+id/tv_guest"
             android:text="게스트 모드"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:textSize="15dp"
             android:textAlignment="center"
             android:paddingVertical="16dp"
