--- a/app/src/main/res/layout/rv_scrap.xml
+++ b/app/src/main/res/layout/rv_scrap.xml
@@ -12,16 +12,14 @@
             type="com.example.perfumeproject.data.PerfumeData" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/img_perfume"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:imageResource="@{perfumeData.image}"
             android:background="@color/colorPink"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
