--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="white">#FFFFFF</color>
     <color name="colorGray">#eeeeee</color>
     <color name="colorPink">#ff3985</color>
-    <color name="colorGray82">#828282</color>
+    <color name="colorGray82">#afafaf</color>
     <color name="colorBlack66">#66000000</color>
 
 </resources>
