--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,18 +17,27 @@
         android:paddingHorizontal="24dp">
 
 
-        <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        <ImageView
+            android:padding="16dp"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/folder"
-            android:scaleType="fitXY"
             android:layout_marginVertical="10dp"
             app:onSingleClick="@{vm::ScrapClick}"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:background="@drawable/bg_login_guest"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/perfume2"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="@id/tv_app_name"
+            app:layout_constraintBottom_toTopOf="@id/tv_app_name"
+            app:layout_constraintStart_toStartOf="@id/tv_app_name"/>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -48,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="기존 향수와 비슷한 향수, 새로운 향수를\n추천해드립니다."
+            android:text="기존 향수와 비슷한 향수 또는\n새로운 향수를 추천해드립니다."
             app:layout_constraintTop_toBottomOf="@id/tv_app_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
