--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,6 @@
             android:id="@+id/btn_login"
             android:src="@drawable/kakao_login_large_wide"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
             app:layout_constraintBottom_toTopOf="@id/tv_guest"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -65,7 +64,7 @@
             android:textSize="15dp"
             android:textAlignment="center"
             android:paddingVertical="16dp"
-            app:layout_constraintTop_toBottomOf="@id/btn_login"
+            android:layout_marginBottom="28dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
