--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -16,10 +16,12 @@
         tools:context=".ui.recommendation.RecommendationActivity"
         android:paddingHorizontal="24dp">
 
-        <ImageButton
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/check"
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/check"
             android:layout_marginVertical="24dp"
             app:onSingleClick="@{vm::perfumeRecommendationItem}"
             app:layout_constraintTop_toTopOf="parent"
