--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -17,11 +17,13 @@
         android:paddingHorizontal="24dp">
 
 
-        <ImageButton
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/check"
             app:onSingleClick="@{vm::perfumeRecommendationItem}"
-            android:background="@drawable/check"
             android:layout_marginVertical="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
@@ -31,7 +33,7 @@
             android:id="@+id/tv_search_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="가지고 있는 향수를\n모두 추가해주세요."
+            android:text="가지고 있는 향수를\n추가해주세요."
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20dp"
