--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,16 +13,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.detail.HomeActivity"
-        android:paddingHorizontal="24dp">
+        tools:context=".ui.detail.HomeActivity">
 
 
         <ImageView
             android:padding="16dp"
-            android:layout_width="60dp"
+            android:layout_width="76dp"
             android:layout_height="50dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/folder"
+            android:src="@drawable/files"
             android:layout_marginVertical="10dp"
             app:onSingleClick="@{vm::ScrapClick}"
             app:layout_constraintTop_toTopOf="parent"
@@ -71,6 +70,7 @@
             android:id="@+id/btn_perfume_search"
             android:textSize="16dp"
             android:textStyle="bold"
+            android:layout_marginHorizontal="24dp"
             android:textColor="@color/white"
             android:layout_marginBottom="16dp"
             app:onSingleClick="@{vm::SearchClick}"
@@ -87,6 +87,7 @@
             android:text="새로운 향수 추천 받기"
             android:textStyle="bold"
             android:textSize="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textColor="@color/white"
             android:background="@drawable/bg_12_pink"
             android:layout_marginBottom="28dp"
