--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="vm"
             type="com.example.perfumeproject.ui.recommendation.RecommendationViewModel" />
@@ -43,21 +44,38 @@
 
 
         <EditText
+            android:id="@+id/edit_text"
             android:background="@drawable/bg_login_guest"
             android:layout_marginVertical="40dp"
             android:textSize="20dp"
             android:padding="16dp"
-            android:hint="원하는 향수의 느낌을 적어주세요 :)"
+            android:hint="원하는 향수의 느낌을 적어주세요 :)\n영어로만 입력이 가능합니다."
             android:maxLines="3"
             android:gravity="left"
+            android:inputType="textMultiLine"
+            android:scrollHorizontally="false"
+            android:singleLine="true"
+            android:textStyle="normal"
             app:textChangedListener="@{vm.searchTextWatcher}"
             android:textColor="@color/black"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/tv_scrap_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+
+
+        <TextView
+            android:visibility="@{vm.warningEng ? View.VISIBLE : View.GONE }"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="영어로만 입력이 가능합니다!"
+            android:textColor="@color/colorPink"
+            android:textSize="12dp"
+            app:layout_constraintBottom_toTopOf="@id/edit_text"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
 
