--- a/app/src/main/res/layout/item_perfume.xml
+++ b/app/src/main/res/layout/item_perfume.xml
@@ -94,7 +94,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:max="100"
                 android:min="0"
-                android:progress="@{perfumeData.similarity}"
+                android:progress="@{perfumeData.similar}"
                 android:progressTint="@color/colorPink"
                 tools:progress="80"/>
 
